* troff: Handles input characters according to LC_CTYPE now in combination
  with the new font setup. In an UTF-8 locale, the characters that are
  present in standard PostScript fonts are supported; otherwise, a
  locale-specific subset of them is available.
* troff: It is now possible to use "\[name]", where name is a character
  defined in the .afm file for the current font.

Release 050816
* nroff: A special terminal name, -Tlocale, has been introduced. With this
  option, UTF-8 output is generated if permitted by the current LC_CTYPE
  locale, and regular -Tlp output otherwise.
* [nt]roff: A new option, "-x", enables the recognition of extended
  features that may affect compatibility with previous versions. The "-X"
  option disables these features; this is currently the default. Note
  that the features enabled with -x are under development and subject
  to change.
* [nt]roff: With the -x option, it is now possible to use ".de", ".ds",
  ".nr", and similar requests with more than two-character name arguments,
  as in ".de longname", and to access such macros later with ".longname",
  strings with "\*[longname]", and number registers with "\n[longname]".
* [nt]roff: The "\$@" and "\$*" escape sequences to print all arguments
  to a macro are now understood with the -x option.
* troff: The ".ss" command now accepts a second numeric argument with the
  -x option. If it is zero, no second space character is printed between
  sentences. Otherwise, a second space character with the same width as
  the first one is printed.
* [nt]roff: The static block list limit NBLIST has been removed, memory
  is now dynamically allocated as needed.
* [nt]roff: There is no static limit on the number of macros/strings and
  the number of number registers anymore.
* -man: A defect in the supplied -man macro package caused headers and
  footers to be garbled when they were printed between parts of a tbl table
  that was split across pages.

Release 050813
* Initial release.