@@ -1,7 +1,7 @@
 /*
  * Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)proto.h	1.3 (gritter) 8/16/05
+ * Sccsid @(#)proto.h	1.4 (gritter) 8/18/05
  */
 
 /* n10.c */
@@ -47,3 +47,4 @@ void casess(void);
 tchar xlss(void);
 void caseafm(void);
 void casesupply(void);
+void casetkf(void);
