@@ -1,7 +1,7 @@
 /*
  * Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)proto.h	1.4 (gritter) 8/17/05
+ * Sccsid @(#)proto.h	1.5 (gritter) 8/18/05
  */
 
 /* t6.c */
@@ -39,6 +39,7 @@ void casess(void);
 tchar xlss(void);
 void caseafm(void);
 void casesupply(void);
+void casetkf(void);
 int mapwc(int);
 /* t10.c */
 void ptinit(void);
